<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.brendon.proto.GenerateQuestionActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_question"
        android:textSize="20dp"/>

    <EditText android:id="@+id/edit_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_question"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_response"
        android:textSize="20dp"/>

    <EditText android:id="@+id/edit_response"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_response"/>

    <Button android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/button_send" />
        <!--android:onClick="generateQuestion" />-->

</LinearLayout>
